--- a/app/src/main/res/drawable/circle_bg.xml
+++ b/app/src/main/res/drawable/circle_bg.xml
@@ -1,3 +1,3 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <solid android:color="#F8BBD0" />
+    <solid android:color="#8D9274" />
 </shape>
