--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,24 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Nội dung chính -->
-    <FrameLayout
-        android:id="@+id/main_content"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation" />
+        android:layout_height="match_parent">
 
-    <!-- Thanh điều hướng dưới cùng -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu_admin"
-        app:labelVisibilityMode="labeled"
-        android:background="?android:attr/windowBackground" />
-</RelativeLayout>
+        <FrameLayout
+            android:id="@+id/main_content"
+            android:layout_above="@id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <!-- ✅ Nút menu căn phải -->
+        <ImageButton
+            android:id="@+id/btn_open_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="21dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Menu"
+            android:src="@drawable/ic_menu" />
+
+        <!-- ✅ Bottom Nav -->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FDF8F2"
+            android:layout_alignParentBottom="true"
+            app:menu="@menu/bottom_nav_menu_admin"/>
+
+    </RelativeLayout>
+
+    <!-- ✅ Drawer Menu -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#FDF8F2"
+        app:menu="@menu/nav_drawer_menu_admin"
+        app:headerLayout="@layout/nav_header_staff"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
