--- a/app/src/main/res/layout/nav_header_staff.xml
+++ b/app/src/main/res/layout/nav_header_staff.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#FF2F6A"
+    android:background="#5C774E"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
