--- a/app/src/main/res/menu/bottom_nav_menu_admin.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_admin.xml
@@ -1,15 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_home_admin"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="Trang chủ" />
+
     <item
-        android:id="@+id/nav_contact"
+        android:id="@+id/nav_contact_admin"
         android:icon="@drawable/ic_chat"
         android:title="Liên hệ" />
+
     <item
-        android:id="@+id/nav_profile"
+        android:id="@+id/nav_profile_admin"
         android:icon="@drawable/ic_user"
-        android:title="Tài khoản " />
+        android:title="Tài khoản" />
 </menu>
