--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:text="ĐĂNG NHẬP"
             android:textSize="22sp"
             android:textStyle="bold"
-            android:textColor="#E53935"
+            android:textColor="#47A94B"
             android:layout_marginBottom="16dp" />
 
         <EditText
@@ -44,7 +44,7 @@
             android:layout_marginTop="12dp"
             android:hint="Mật khẩu"
             app:endIconMode="password_toggle"
-            app:endIconTint="#E53935"
+            app:endIconTint="#47A94B"
             android:background="@null">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -99,7 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quên mật khẩu?"
-            android:textColor="#D32F2F"
+            android:textColor="#47A94B"
             android:layout_marginTop="8dp"
             android:layout_gravity="center" />
 
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bạn chưa có tài khoản? Liên hệ Admin"
-            android:textColor="#D32F2F"
+            android:textColor="#47A94B"
             android:layout_marginTop="8dp"
             android:layout_gravity="center" />
     </LinearLayout>
