--- a/app/src/main/res/drawable/bg_received.xml
+++ b/app/src/main/res/drawable/bg_received.xml
@@ -1,4 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#E0F7FA" /> <!-- Màu nền nhạt dễ thấy chữ -->
+    <corners android:radius="16dp" />
+    <padding
+        android:left="8dp"
+        android:top="4dp"
+        android:right="8dp"
+        android:bottom="4dp" />
+</shape>
