--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp">
+    android:padding="24dp"
+    android:background="@color/warm_light_background"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +17,7 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:src="@drawable/logo"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="24dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -23,7 +25,7 @@
             android:text="ĐĂNG NHẬP"
             android:textSize="22sp"
             android:textStyle="bold"
-            android:textColor="#47A94B"
+            android:textColor="@color/black"
             android:layout_marginBottom="16dp" />
 
         <EditText
@@ -32,7 +34,7 @@
             android:layout_height="wrap_content"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:background="@drawable/red_border_box"
+            android:background="@drawable/grey_border_box"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="8dp"
             android:padding="12dp"
@@ -44,7 +46,7 @@
             android:layout_marginTop="12dp"
             android:hint="Mật khẩu"
             app:endIconMode="password_toggle"
-            app:endIconTint="#47A94B"
+            app:endIconTint="@color/black"
             android:background="@null">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -55,24 +57,24 @@
                 android:drawableStart="@drawable/ic_lock"
                 android:drawablePadding="8dp"
                 android:padding="12dp"
-                android:background="@drawable/red_border_box" />
+                android:background="@drawable/grey_border_box" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- CHỈ CÒN 2 VAI TRÒ -->
         <RadioGroup
             android:id="@+id/roleGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="16dp">
 
             <RadioButton
                 android:id="@+id/rb_admin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Admin"
-                android:tag="admin" />
+                android:tag="admin"
+                android:textColor="@color/black" />
 
             <RadioButton
                 android:id="@+id/rb_staff"
@@ -80,7 +82,8 @@
                 android:layout_height="wrap_content"
                 android:text="Staff"
                 android:tag="staff"
-                android:layout_marginStart="16dp" />
+                android:layout_marginStart="32dp"
+                android:textColor="@color/black" />
         </RadioGroup>
 
         <androidx.appcompat.widget.AppCompatButton
@@ -88,19 +91,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Đăng Nhập"
-            android:textColor="#FFFFFF"
+            android:textColor="@android:color/white"
             android:background="@drawable/button_rounded"
             android:backgroundTint="@null"
             android:padding="14dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="24dp" />
 
         <TextView
             android:id="@+id/txtForgot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quên mật khẩu?"
-            android:textColor="#47A94B"
-            android:layout_marginTop="8dp"
+            android:textColor="@color/primary_color"
+            android:layout_marginTop="12dp"
             android:layout_gravity="center" />
 
         <TextView
@@ -108,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bạn chưa có tài khoản? Liên hệ Admin"
-            android:textColor="#47A94B"
+            android:textColor="@color/primary_color"
             android:layout_marginTop="8dp"
             android:layout_gravity="center" />
     </LinearLayout>
