--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -1,6 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:gravity="start">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Nội dung tin nhắn -->
+    <TextView
+        android:id="@+id/tvMessageLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_message_receiver"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:padding="10dp"
+        android:maxWidth="280dp"
+        android:layout_marginBottom="4dp"
+        android:text="Tin nhắn người khác" />
+
+    <!-- Thời gian gửi -->
+    <TextView
+        android:id="@+id/tvTimeLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10:30 10/07/2025"
+        android:textSize="12sp"
+        android:textColor="#888888" />
+</LinearLayout>
