--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="teal_700">#018786</color>
     <color name="warm_light_background">#FFFCF2</color>
     <color name="purple_700">#3700B3</color>
+    <color name="green_dark">#3D7041</color>
 
 
 
