--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -105,23 +105,23 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!-- RecyclerView -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_orders"
+    <!-- ✅ Container fragment để load các fragment con -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_below="@id/layout_filter"
         android:layout_above="@id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:layout_alignParentBottom="false"
-        android:layout_weight="1" />
+        android:layout_marginBottom="56dp" />
 
-    <!-- Bottom Navigation -->
+    <!-- ✅ Bottom Navigation nằm dưới cùng -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_nav_menu_staff" />
+
 </RelativeLayout>
