--- a/app/src/main/res/layout/dialog_user_form.xml
+++ b/app/src/main/res/layout/dialog_user_form.xml
@@ -4,6 +4,7 @@
     android:padding="16dp">
 
     <LinearLayout
+        android:id="@+id/formContainer"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,7 +12,8 @@
         android:padding="20dp"
         android:elevation="2dp">
 
-        <EditText
+
+    <EditText
             android:id="@+id/inputName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
