--- a/app/src/main/res/layout/item_selected_product.xml
+++ b/app/src/main/res/layout/item_selected_product.xml
@@ -1,3 +1,4 @@
+<!-- app/src/main/res/layout/item_select_product.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="12dp"
     android:orientation="horizontal"
