--- a/app/src/main/res/layout/item_image_sender.xml
+++ b/app/src/main/res/layout/item_image_sender.xml
@@ -9,8 +9,9 @@
     <ImageView
         android:id="@+id/imgMessage"
         android:layout_width="220dp"
-        android:layout_height="280dp"
-        android:scaleType="centerCrop"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         android:background="@drawable/bg_message_sender"
         android:padding="4dp" />
 
