--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -20,7 +20,7 @@
 
     <item
         android:id="@+id/nav_reviews"
-        android:title="Quản lý đánh giá"
+        android:title="Quản lý Banner"
         android:icon="@drawable/icon_quanlydg" />
 
 
