--- a/app/src/main/res/menu/nav_drawer_menu_admin.xml
+++ b/app/src/main/res/menu/nav_drawer_menu_admin.xml
@@ -19,8 +19,8 @@
 
     <item
         android:id="@+id/nav_statistics"
-        android:title="Thống kê doanh thu"
-        android:icon="@drawable/icon_thongke" />
+        android:title="Quản lý banner"
+        android:icon="@drawable/icon_view" />
 
     <item
         android:enabled="false"
